k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-client
  namespace: todo-app
  labels:
    app: todo-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-client
  template:
    metadata:
      labels:
        app: todo-client
    spec:
      containers:
        - name: todo-client
          image: 015048356322.dkr.ecr.ap-south-1.amazonaws.com/todo-client:46fd7231a7c1c15bbcc2d4097fa3ac2ff7f50ad9
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
