k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-client
  namespace: todo-app
spec:
  selector:
    app: todo-client
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
